# letterblend

./: docker-compose.yml
backend/: Dockerfile  package.json
backend/src/: index.ts  mongo.ts  server.ts
backend/src/constants/: env.ts  http.ts
backend/src/handlers/: poster.ts  room.ts  user.ts
backend/src/middlewares/: validate.ts
backend/src/routes/: index.ts
backend/src/services/: room.ts  rooms.ts  rpdb.ts  scraper.ts
backend/src/types/: room.ts  scraper.ts  tmdb.ts
backend/src/utils/: blend.ts  data.ts  filter.ts
frontend/: .prettierrc.json  Dockerfile  eslint.config.js  nuxt.config.ts  package.json  tailwind.config.js
frontend/src/: api.ts  app.vue  query.ts
frontend/src/components/: AvatarView.vue  CardView.vue  IconButton.vue  InputField.vue  LabeledValue.vue  LogoView.vue  Particles.vue  TextButton.vue
frontend/src/composables/: user.ts
frontend/src/layouts/: default.vue
frontend/src/middleware/: user.global.ts
frontend/src/pages/: auth.vue  blend.vue  create.vue  index.vue  result.vue
frontend/src/plugins/: query.ts  tippy.client.ts
frontend/src/providers/: raw.ts
frontend/src/types/: movie.ts  room.ts  sort.ts
frontend/src/utils/: computed.ts  load.ts  notification.ts  option.ts  particlesInit.ts  query.ts  unref.ts  validate.ts  wait.ts
room/: .gitignore  Dockerfile  development.env  package.json
room/src/: index.ts  mongo.ts  server.ts
room/src/constants/: env.ts
room/src/handlers/: rest.ts  socket.ts
room/src/models/: room.ts
scraper/: Dockerfile  pyproject.toml
scraper/app/: movies.py  users.py
(+60 files in other folders)
