[tool.poetry]
name = "lblend-scraper"
version = "0.1.0"
description = "Letterboxd Scraper API"
authors = ["Tenzin Pelletier <pelletier@tenzin.live>"]

[tool.poetry.dependencies]
python = "3.10.5"
flask = "^3.1.0"
flask-cors = "^5.0.0"
letterboxdpy = {git = "https://github.com/nmcassa/letterboxdpy.git", rev = "b904f2822bd3c443ddaf84b343e85ed9f10c1eb5"}
gunicorn = "^23.0.0"
eventlet = "^0.38.0"
lxml = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
