[tool.poetry]
name = "lblend-scraper"
version = "0.1.0"
description = "Letterboxd Scraper API"
authors = ["Tenzin Pelletier <pelletier@tenzin.live>"]

[tool.poetry.dependencies]
python = "3.12.10"
flask = "^3.1.0"
flask-cors = "^5.0.0"
gunicorn = "^23.0.0"
eventlet = "^0.38.0"
lxml = "^5.1.0"
letterboxdpy = "^6.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
